# Image_Pipeline

./: .gitignore  CMakeLists.txt  ReadME.md  build.sh  run.sh
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/frame/: Frame.h
io/: CMakeLists.txt
io/capture/: IFrameSource.h  VideoFileSource.cpp  VideoFileSource.h
stages/: CMakeLists.txt  GrayscaleStage.cpp  GrayscaleStage.h  IStage.h  Pipeline.cpp  Pipeline.h
